MAINT: updated hhtp to https in bib file

--- a/doc/cogent3.bib
+++ b/doc/cogent3.bib
@@ -1,5 +1,5 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.net/
 
 
 %% Created for Gavin A Huttley at 2020-04-22 14:57:59 +1000 
@@ -16,7 +16,7 @@
 	Number = {4},
 	Pages = {167},
 	Title = {{Do genomic datasets resolve the correct relationship among the placental, marsupial and monotreme lineages?}},
-	Url = {http://www.publish.csiro.au/?paper=ZO09049},
+	Url = {https://www.publish.csiro.au/?paper=ZO09049},
 	Volume = {57},
 	Year = {2009}}
 
@@ -26,7 +26,7 @@
 	Journal = {Biol Direct},
 	Pages = {52},
 	Title = {{Pitfalls of the most commonly used models of context dependent substitution.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/19087239},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19087239},
 	Volume = {3},
 	Year = {2008}}
 
@@ -59,7 +59,7 @@
 	Number = {2},
 	Pages = {281--93},
 	Title = {{Genetic distance for a general non-stationary Markov substitution process.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/25503772},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/25503772},
 	Volume = {64},
 	Year = {2015}}
 
@@ -87,7 +87,7 @@
 	Number = {5},
 	Pages = {335--336},
 	Title = {{QIIME allows analysis of high-throughput community sequencing data.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/20383131},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/20383131},
 	Volume = {7},
 	Year = {2010}}
 
@@ -98,7 +98,7 @@
 	Number = {1},
 	Pages = {327},
 	Title = {{Detecting coevolution without phylogenetic trees? Tree-ignorant metrics of coevolution perform as well as tree-aware metrics.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/19055758},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19055758},
 	Volume = {8},
 	Year = {2008}}
 
@@ -130,7 +130,7 @@
 	Number = {2},
 	Pages = {147--159},
 	Title = {{Regional Context in the Alignment of Biological Sequence Pairs.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/21107551},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/21107551},
 	Volume = {72},
 	Year = {2010}}
 
@@ -141,7 +141,7 @@
 	Number = {1},
 	Pages = {511},
 	Title = {{Comparison of methods for estimating the nucleotide substitution matrix}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/19046431},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19046431},
 	Volume = {9},
 	Year = {2008}}
 
@@ -204,7 +204,7 @@
 	Number = {3},
 	Pages = {637--649},
 	Title = {{Evidence that localised variation in primate sequence divergence arises from an influence of nucleosome placement on DNA repair}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/19843619},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19843619},
 	Volume = {27},
 	Year = {2010}}
 
@@ -215,7 +215,7 @@
 	Month = {apr},
 	Pages = {72--9},
 	Title = {{Folding behavior of four silks of giant honey bee reflects the evolutionary conservation of aculeate silk proteins.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/25712559},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/25712559},
 	Volume = {59},
 	Year = {2015}}
 
@@ -226,6 +226,6 @@
 	Number = {9},
 	Pages = {1760--1768},
 	Title = {{Modeling the impact of DNA methylation on the evolution of BRCA1 in mammals.}},
-	Url = {http://www.ncbi.nlm.nih.gov/pubmed/15190129},
+	Url = {https://www.ncbi.nlm.nih.gov/pubmed/15190129},
 	Volume = {21},
 	Year = {2004}}
