DOC: tidy bib file

--- a/doc/cogent3.bib
+++ b/doc/cogent3.bib
@@ -13,7 +13,6 @@
 	Author = {Huttley, Gavin},
 	Date-Modified = {2020-04-22 14:50:31 +1000},
 	Journal = {Australian Journal of Zoology},
-	Number = {4},
 	Pages = {167},
 	Title = {{Do genomic datasets resolve the correct relationship among the placental, marsupial and monotreme lineages?}},
 	Url = {https://www.publish.csiro.au/?paper=ZO09049},
@@ -34,7 +33,6 @@
 	Author = {Knight, R and Maxwell, P and Birmingham, A and Carnes, J and Caporaso, J G and Easton, B C and Eaton, M and Hamady, M and Lindsay, H and Liu, Z and Lozupone, C and McDonald, D and Robeson, M and Sammut, R and Smit, S and Wakefield, M J and Widmann, J and Wikman, S and Wilson, S and Ying, H and Huttley, G A},
 	Date-Modified = {2020-04-22 14:47:50 +1000},
 	Journal = {Genome Biol},
-	Number = {8},
 	Pages = {R171},
 	Title = {{PyCogent: a toolkit for making sense from sequence.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/17708774},
@@ -46,7 +44,7 @@
 	Date-Modified = {2020-04-22 14:52:21 +1000},
 	Journal = {Genome Biology and Evolution},
 	Pages = {938},
-	Title = {{Exploiting CpG Hypermutability to Identify Phenotypically Significant Variation Within Human Protein-Coding Genes}},
+	Title = {{Exploiting CpG hypermutability to identify phenotypically significant variation within human protein-coding genes}},
 	Url = {https://academic.oup.com/gbe/article/doi/10.1093/gbe/evr021/578802},
 	Volume = {3},
 	Year = {2011}}
@@ -55,8 +53,6 @@
 	Author = {Kaehler, Benjamin D and Yap, Von Bing and Zhang, Rongli and Huttley, Gavin A},
 	Date-Modified = {2020-04-22 14:57:11 +1000},
 	Journal = {Systematic Biology},
-	Month = {mar},
-	Number = {2},
 	Pages = {281--93},
 	Title = {{Genetic distance for a general non-stationary Markov substitution process.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/25503772},
@@ -72,10 +68,8 @@
 	Author = {Yap, Von Bing and Lindsay, Helen and Easteal, Simon and Huttley, Gavin},
 	Date-Modified = {2020-04-22 14:51:30 +1000},
 	Journal = {Molecular Biology and Evolution},
-	Month = {mar},
-	Number = {3},
 	Pages = {726--734},
-	Title = {{Estimates of the Effect of Natural Selection on Protein-Coding Content}},
+	Title = {{Estimates of the effect of natural selection on protein-coding content}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19815689},
 	Volume = {27},
 	Year = {2010}}
@@ -84,7 +78,6 @@
 	Author = {Caporaso, J Gregory and Kuczynski, Justin and Stombaugh, Jesse and Bittinger, Kyle and Bushman, Frederic D and Costello, Elizabeth K and Fierer, Noah and Pe{\~{n}}a, Antonio Gonzalez and Goodrich, Julia K and Gordon, Jeffrey I and Huttley, Gavin A and Kelley, Scott T and Knights, Dan and Koenig, Jeremy E and Ley, Ruth E and Lozupone, Catherine A and McDonald, Daniel and Muegge, Brian D and Pirrung, Meg and Reeder, Jens and Sevinsky, Joel R and Turnbaugh, Peter J and Walters, William A and Widmann, Jeremy and Yatsunenko, Tanya and Zaneveld, Jesse and Knight, Rob},
 	Date-Modified = {2020-04-22 14:50:56 +1000},
 	Journal = {Nat Methods},
-	Number = {5},
 	Pages = {335--336},
 	Title = {{QIIME allows analysis of high-throughput community sequencing data.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/20383131},
@@ -95,7 +88,6 @@
 	Author = {Caporaso, J G and Smit, S and Easton, B C and Hunter, L and Huttley, G A and Knight, R},
 	Date-Modified = {2020-04-22 14:48:18 +1000},
 	Journal = {BMC Evol Biol},
-	Number = {1},
 	Pages = {327},
 	Title = {{Detecting coevolution without phylogenetic trees? Tree-ignorant metrics of coevolution perform as well as tree-aware metrics.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19055758},
@@ -106,7 +98,6 @@
 	Author = {Epps, Julien and Ying, Hua and Huttley, Gavin},
 	Date-Modified = {2020-04-22 14:52:01 +1000},
 	Journal = {Biology Direct},
-	Number = {1},
 	Pages = {21},
 	Title = {{Statistical methods for detecting periodic fragments in DNA sequence data}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/21527008},
@@ -127,7 +118,6 @@
 	Author = {Sammut, Raymond and Huttley, Gavin},
 	Date-Modified = {2020-04-22 14:51:15 +1000},
 	Journal = {J Mol Evol},
-	Number = {2},
 	Pages = {147--159},
 	Title = {{Regional Context in the Alignment of Biological Sequence Pairs.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/21107551},
@@ -138,7 +128,6 @@
 	Author = {Oscamou, Maribeth and McDonald, Daniel and Yap, Von Bing and Huttley, Gavin and Lladser, Manuel and Knight, Rob},
 	Date-Modified = {2020-04-22 14:49:14 +1000},
 	Journal = {BMC Bioinformatics},
-	Number = {1},
 	Pages = {511},
 	Title = {{Comparison of methods for estimating the nucleotide substitution matrix}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19046431},
@@ -157,7 +146,6 @@
 	Author = {Butterfield, A and Vedagiri, V and Lang, E and Lawrence, C and Wakefield, M J and Isaev, A and Huttley, G A},
 	Date-Modified = {2020-04-22 14:46:26 +1000},
 	Journal = {BMC Bioinformatics},
-	Number = {1},
 	Pages = {1},
 	Title = {{PyEvolve: a toolkit for statistical modelling of molecular evolution}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/14706121},
@@ -168,9 +156,8 @@
 	Author = {Verbyla, Klara L and Yap, Von Bing and Pahwa, Anuj and Shao, Yunli and Huttley, Gavin A},
 	Date-Modified = {2020-04-22 14:56:37 +1000},
 	Journal = {PLoS ONE},
-	Number = {7},
 	Pages = {e69187},
-	Title = {{The Embedding Problem for Markov Models of Nucleotide Substitution}},
+	Title = {{The embedding problem for Markov models of nucleotide substitution}},
 	Url = {https://pubmed.ncbi.nlm.nih.gov/23935949/},
 	Volume = {8},
 	Year = {2013}}
@@ -189,10 +176,8 @@
 	Author = {Kaehler, Benjamin D and Yap, Von Bing and Huttley, Gavin A},
 	Date-Modified = {2020-04-22 14:57:45 +1000},
 	Journal = {Genome Biology and Evolution},
-	Month = {jan},
-	Number = {1},
 	Pages = {134--149},
-	Title = {{Standard Codon Substitution Models Overestimate Purifying Selection for Non-Stationary Data}},
+	Title = {{Standard codon substitution models overestimate purifying selection for non-stationary data}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/28175284},
 	Volume = {9},
 	Year = {2017}}
@@ -201,7 +186,6 @@
 	Author = {Ying, Hua and Epps, Julian and Williams, Rohan and Huttley, Gavin},
 	Date-Modified = {2020-04-22 14:51:42 +1000},
 	Journal = {Mol Biol Evol},
-	Number = {3},
 	Pages = {637--649},
 	Title = {{Evidence that localised variation in primate sequence divergence arises from an influence of nucleosome placement on DNA repair}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/19843619},
@@ -212,7 +196,6 @@
 	Author = {Maitip, Jakkrawut and Trueman, Holly E and Kaehler, Benjamin D and Huttley, Gavin A and Chantawannakul, Panuwan and Sutherland, Tara D},
 	Date-Modified = {2020-04-22 14:57:28 +1000},
 	Journal = {Insect biochemistry and molecular biology},
-	Month = {apr},
 	Pages = {72--9},
 	Title = {{Folding behavior of four silks of giant honey bee reflects the evolutionary conservation of aculeate silk proteins.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/25712559},
@@ -223,7 +206,6 @@
 	Author = {Huttley, Gavin A},
 	Date-Modified = {2020-04-22 14:47:24 +1000},
 	Journal = {Mol Biol Evol},
-	Number = {9},
 	Pages = {1760--1768},
 	Title = {{Modeling the impact of DNA methylation on the evolution of BRCA1 in mammals.}},
 	Url = {https://www.ncbi.nlm.nih.gov/pubmed/15190129},
